objects/Booking__c.object
<CustomObject>
    <description>Stores the Booking Information of the Customer</description>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <description>Refers to whether the booking was Approved or Cancelled.</description>
        <inlineHelpText>Booking Approved or Cancelled</inlineHelpText>
        <label>Booking Status</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Booking__c</fullName>
        <description>Date of Booking</description>
        <inlineHelpText>Date of Booking</inlineHelpText>
        <label>Date of Booking</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fare_Amount__c</fullName>
        <description>The Amount Per Seat</description>
        <inlineHelpText>Amount Per Seat</inlineHelpText>
        <label>Fare Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <description>The number of seats the Customers wants to reserve.</description>
        <inlineHelpText>Number of Seats Customer wants to reserve</inlineHelpText>
        <label>Number of Seats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount to be paid.</description>
        <formula>Number_of_Seats__c  * Fare_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount to be Paid.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Schedule_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Schedule ID</label>
        <referenceTo>Travel_Schedule__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booking</label>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>